# FIDES-DPP

./: .env.example  .gitignore  DEPENDENCIES.md  GETTING_STARTED.md  MILESTONE_1_DELIVERY.md  MILESTONE_2_DELIVERY.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml
docs/: ARCHITECTURE.md  ROADMAP.md  TESTING_GUIDE.md  deployment.md
dpp_contract/: Cargo.toml  DEPLOY_DPP.sh  INTERACT_DPP.sh  README.md  lib.rs
fidesdpp/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  ENV_VARIABLES.md  IPFS_SETUP.md  IPFS_SETUP_FOSS.md  OPEN_SOURCE_MODE.md  did.json.example  did.json.old-backup  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
fidesdpp/cli/: README.md  check-ipfs-pin.ts  list-tokens.ts  package-lock.json  package.json  query-passport.ts  run-cli.sh  tsconfig.json  verify-token.ts
fidesdpp/cli/src/: index.ts
fidesdpp/db/: init.sql
fidesdpp/db/migrations/: 001_anagrafica.sql
fidesdpp/didweb/.well-known/: did.json  polkadot-accounts.json
fidesdpp/examples/: README.md  passport.example.json  passport.update.example.json
fidesdpp/scripts/: add-authorized-account.ts  bootstrap-fidesdpp.ts  clean-generated-src-artifacts.cjs  regenerate-did-json.ts  register-and-verify-issuer.ts  run-cli-launcher.cjs  run-cli.cjs  run-cli.ts  setup-env-master-key.ts  typegen.ts  verify-did-web-live.ts  verify-master-key.ts
fidesdpp/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
scripts/: build-contract.sh  setup-cli.ps1  setup-ipfs.sh  verify-dependencies.sh
(+263 files in other folders)
