[package]
name = "dpp_contract"
version = "6.0.0"
authors = ["FIDES-DPP"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "6.0.0-beta", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
